--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.green-box {
+  position: absolute;
+  background: green;
+  top: 0;
+  z-index: -2;
+  bottom: 0;
+  opacity: 0.6;
+  right: 0;
+  /* width: 100px; */
+}
+.red-box {
+  position: absolute;
+  background: red;
+  top: 0;
+  z-index: -2;
+  bottom: 0;
+  opacity: 0.6;
+  left: 0;
+  /* width: 100px; */
+}
